fix modal not showing of docker not found

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,11 +87,9 @@ textarea:focus {
 @keyframes hyzenFadeIn {
   from {
     opacity: 0;
-    transform: translateY(3px);
   }
   to {
     opacity: 1;
-    transform: translateY(0);
   }
 }
 
